Card alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -2117,6 +2117,26 @@ h1, h2, h3, h4, h5,
   .notable-alumni-fa-border {
     text-shadow: 0px 0px 3px white;
   }
+
+  .alumni-card1 {
+    width: 16em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    line-height: 1.5em;
+    text-align: center;
+    background-color: rgb(248, 248, 248);
+    border-radius: 1em;
+    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.125);
+    overflow: hidden;
+    transition: 0.125s ease-in-out;
+    -webkit-transition: 0.125s ease-in-out;
+    -moz-transition: 0.125s ease-in-out;
+  }
+  .alumni-card1:hover {
+    transform: translateY(-0.5rem);
+  }
+
+
   .color-red-spl {
     color: #dc3545;
   }
